--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# **/*.aux
-# **/*.log
-# **/*.out
-# **/*.synctex.gz
-# **/*.fdb_latexmk
-# **/*.fls
+**/*.aux
+**/*.log
+**/*.out
+**/*.synctex.gz
+**/*.fdb_latexmk
+**/*.fls
